# IPSAE-Refactored

./: .gitignore  analyze_ligand_binding.py  pyproject.toml
Example/: 5b8c_scores_alphafold2_multimer_v3_model_4_seed_000.json  5b8c_unrelaxed_alphafold2_multimer_v3_model_4_seed_000_15_15.pml  5b8c_unrelaxed_alphafold2_multimer_v3_model_4_seed_000_15_15.txt  5b8c_unrelaxed_alphafold2_multimer_v3_model_4_seed_000_15_15_byres.txt  RAF1_KSR1_MEK1_9f755_unrelaxed_alphafold2_multimer_v3_model_1_seed_000_15_15.pml  RAF1_KSR1_MEK1_9f755_unrelaxed_alphafold2_multimer_v3_model_1_seed_000_15_15.txt  RAF1_KSR1_MEK1_9f755_unrelaxed_alphafold2_multimer_v3_model_1_seed_000_15_15_byres.txt  Readme.md  fold_5b8c_full_data_0.json  fold_5b8c_model_0.cif  fold_5b8c_model_0_10_10.pml  fold_5b8c_model_0_10_10.txt  fold_5b8c_model_0_10_10_byres.txt  fold_5b8c_summary_confidences_0.json  fold_aurka_0_tpx2_0_full_data_0.json  fold_aurka_0_tpx2_0_model_0.cif  fold_aurka_0_tpx2_0_model_0_10_10.pml  fold_aurka_0_tpx2_0_model_0_10_10.txt  fold_aurka_0_tpx2_0_model_0_10_10_byres.txt
src/ipsae/: cli.py  constants.py  ipsae.py  main.py  models.py  scoring.py  utils.py
src/ipsae/io/: __init__.py  csv.py  pymol.py  text.py
src/ipsae/parsers/: __init__.py  chains.py  pae.py  structure.py
tests/: test_csv_output.py  test_ligand_scoring.py  test_scoring.py
